Se hizo los metodos genericos, falta la creacion del flujo y la pantalla final

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -2544,3 +2544,6 @@ a:hover{
       height: auto;
   }
 }
+.candidate{
+    text-align:center;overflow:hidden;font-size:x-large;font-weight: bold;padding-top:1%;
+  }
